Overflow transition fix

--- a/src/Css/style.css
+++ b/src/Css/style.css
@@ -14,11 +14,11 @@ body {
 
 .slide-enter,
 .slide-exit {
-  transition: transform 1000ms ease-out;
-  z-index: -1; }
+  transition: transform 1000ms ease-out; }
 
 .slide-enter {
-  transform: translateX(100%); }
+  transform: translateX(100%);
+  z-index: -1; }
 
 .slide-enter.slide-enter-active {
   transform: translateX(0%); }
@@ -28,7 +28,8 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  transform: translateX(0%); }
+  transform: translateX(0%);
+  z-index: -1; }
 
 .slide-exit-active {
   transform: translateX(-100%); }
@@ -78,7 +79,6 @@ body {
     text-decoration: none; }
 
 .page-container {
-  background-color: grey;
   height: 90vh;
   width: 100vw;
   overflow: hidden; }
