--- a/src/Sass/components/_switcher.scss
+++ b/src/Sass/components/_switcher.scss
@@ -1,11 +1,11 @@
 .slide-enter,
 .slide-exit {
   transition: transform 1000ms ease-out;
-  z-index: -1;
 }
 
 .slide-enter {
   transform: translateX(100%);
+  z-index: -1;
 }
 
 .slide-enter.slide-enter-active {
@@ -18,6 +18,7 @@
   left: 0;
   width: 100%;
   transform: translateX(0%);
+  z-index: -1;
 }
 
 .slide-exit-active {
