--- a/src/Sass/layouts/_mainLayout.scss
+++ b/src/Sass/layouts/_mainLayout.scss
@@ -1,5 +1,4 @@
 .page-container {
-  background-color: grey;
   height: 90vh;
   width: 100vw;
   overflow: hidden;
